--- a/index.html
+++ b/index.html
@@ -1,41 +1,57 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JS-Biblioteca</title>
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
+
 <body>
-    <h1>Biblioteca</h1>
-    <form id="formulario-libro">
-        <label for="titulo">Título:</label>
-        <input type="text" id="titulo" name="titulo"><br><br>
-        <label for="autor">Autor:</label>
-        <input type="text" id="autor" name="autor"><br><br>
-        <label for="genero">Género:</label>
-        <input type="text" id="genero" name="genero"><br><br>
-        <label for="portada">Portada:</label>
-        <input type="file" id="portada" name="portada" accept="image/*"><br><br>
-        <input type="submit" value="Agregar libro">
-    </form>
-    <input type="text" id="busqueda" placeholder="Buscar libro...">
-    <table id="tabla-libros">
-        <thead>
-            <tr>
-                <th>Título</th>
-                <th>Autor</th>
-                <th>Género</th>
-                <th>Portada</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody id="cuerpo-tabla">
-            <!-- Los libros se agregarán aquí -->
-        </tbody>
-    </table>
+    <nav class="navbar bg-dark bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand">Biblioteca</a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Ingresá algo..." aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+        </div>
+      </nav>
+    <div class="container text-start">
+        <div class="row">
+            <div class="col-8">
+                <form>
+                    <div class="mb-3">
+                        <label for="titulo" class="form-label">Titulo:</label>
+                        <input type="text" class="form-control" id="titulo" aria-describedby="titulo" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="autor" class="form-label">Autor:</label>
+                        <input type="text" class="form-control" id="autor" aria-describedby="autor" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="genero" class="form-label">Género:</label>
+                        <input type="text" class="form-control" id="genero" aria-describedby="genero" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="portada" class="form-label">Portada:</label>
+                        <input type="file" class="form-control" id="portada" accept="image/*" />
+                        <br />
+                        <button type="submit" class="btn btn-success">Agregar</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-2"></div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
