--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <nav class="navbar bg-dark bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand">Biblioteca</a>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Ingresá algo..." aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
+            <a class="navbar-brand">Biblioteca</a>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Ingresá algo..." aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+            </form>
         </div>
-      </nav>
+    </nav>
     <div class="container text-start">
         <div class="row">
             <div class="col-8">
@@ -44,11 +44,26 @@
                     </div>
                 </form>
             </div>
-            <div class="col-2"></div>
+            <div class="col-2">
+                <table class="table table-hover table-bordered my-3" aria-describedby="titulo">
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Nro</th>
+                            <th scope="col">Titulo</th>
+                            <th scope="col">Autor</th>
+                            <th scope="col">Género</th>
+                            <th scope="col">Sinopsis</th>
+                        </tr>
+                    </thead>
+                    <tbody id="data-libros"></tbody>
+                </table>
+            </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+
+
+    <script defer src="./script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
