--- a/pages/Agregar-Libro.html
+++ b/pages/Agregar-Libro.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS-Biblioteca</title>
+    <title>Biblioteca | Agregar un nuevo libro</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -12,10 +12,11 @@
       crossorigin="anonymous"
     />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Biblioteca</a>
+        <a class="navbar-brand" href="../index.html">Biblioteca</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,15 +45,15 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="pages/Agregar-Libro.html"
+                  <a class="dropdown-item" href="Agregar-Libro.html"
                     >Agregar un libro</a
                   >
                 </li>
-                <li><a class="dropdown-item" id="btn-edit" href="#">Editar un libro</a></li>
+                <li><a class="dropdown-item" href="#">Editar un libro</a></li>
                 <li>
                   <hr class="dropdown-divider" />
                 </li>
-                <li><a class="dropdown-item" id="btn-delete" href="#">Eliminar un libro</a></li>
+                <li><a class="dropdown-item" href="#">Eliminar un libro</a></li>
               </ul>
             </li>
           </ul>
@@ -70,23 +71,56 @@
         </div>
       </div>
     </nav>
+
     <div class="container text-start">
       <div class="row">
         <div class="col-2"></div>
-        <table class="table table-striped" aria-describedby="titulo">
-          <thead>
-            <tr>
-              <th scope="col">Nro</th>
-              <th scope="col">Título</th>
-              <th scope="col">Autor</th>
-              <th scope="col">Género</th>
-              <th scope="col">Sinopsis</th>
-            </tr>
-          </thead>
-          <tbody id="data-libros"></tbody>
-        </table>
+        <form>
+          <div class="mb-3">
+            <label for="titulo" class="form-label">Titulo:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="titulo"
+              aria-describedby="titulo"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="autor" class="form-label">Autor:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="autor"
+              aria-describedby="autor"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="genero" class="form-label">Género:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="genero"
+              aria-describedby="genero"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="sinopsis" class="form-label">Género:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="genero"
+              aria-describedby="genero"
+            />
+          </div>
+          <div class="mb-3">
+            <br />
+            <button type="submit" class="btn btn-success">Agregar</button>
+          </div>
+        </form>
       </div>
     </div>
+    <div class="col-8"></div>
+
     <script defer src="js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
