--- a/pages/Agregar-Libro.html
+++ b/pages/Agregar-Libro.html
@@ -72,7 +72,7 @@
       </div>
     </nav>
 
-    <div class="container text-start">
+    <div class="container text-start" id="contenedor">
       <div class="row">
         <div class="col-2"></div>
         <form>
@@ -83,6 +83,7 @@
               class="form-control"
               id="titulo"
               aria-describedby="titulo"
+              name="titulo"
             />
           </div>
           <div class="mb-3">
@@ -92,6 +93,7 @@
               class="form-control"
               id="autor"
               aria-describedby="autor"
+              name="autor"
             />
           </div>
           <div class="mb-3">
@@ -101,15 +103,17 @@
               class="form-control"
               id="genero"
               aria-describedby="genero"
+              name="genero"
             />
           </div>
           <div class="mb-3">
-            <label for="sinopsis" class="form-label">Género:</label>
+            <label for="sinopsis" class="form-label">Sinopsis:</label>
             <input
               type="text"
               class="form-control"
-              id="genero"
-              aria-describedby="genero"
+              id="sinopsis"
+              aria-describedby="sinopsis"
+              name="sinopsis"
             />
           </div>
           <div class="mb-3">
@@ -121,7 +125,7 @@
     </div>
     <div class="col-8"></div>
 
-    <script defer src="js/script.js"></script>
+    <script defer src="../js/agregar-libros.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
