--- a/index.html
+++ b/index.html
@@ -37,18 +37,20 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Ingresá algo..." aria-label="Buscar" />
-                    <button class="btn btn-outline-success" type="submit">
-                        Buscar
-                    </button>
+                <form class="d-flex" role="search" id="search-form">
+                    <input class="form-control me-2" type="search" id="search-input" placeholder="Ingresá algo..."
+                        aria-label="Buscar" />
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
                 </form>
             </div>
         </div>
     </nav>
+
     <div class="container text-start">
         <div class="row">
             <div class="col-12">
+                <h2>Lista de Libros</h2>
+                <ul id="libro-list"></ul>
                 <table class="table table-striped" aria-describedby="titulo">
                     <thead>
                         <tr>
@@ -57,13 +59,41 @@
                             <th scope="col">Autor</th>
                             <th scope="col">Género</th>
                             <th scope="col">Sinopsis</th>
+                            <th scope="col">Acciones</th>
                         </tr>
                     </thead>
                     <tbody id="data-libros"></tbody>
                 </table>
+
+                <!-- Formulario para editar un libro -->
+                <div id="edit-form" class="mt-4 d-none">
+                    <h3>Editar Libro</h3>
+                    <form id="form-edit">
+                        <input type="hidden" id="edit-index" />
+                        <div class="mb-3">
+                            <label for="edit-titulo" class="form-label">Título:</label>
+                            <input type="text" class="form-control" id="edit-titulo" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-autor" class="form-label">Autor:</label>
+                            <input type="text" class="form-control" id="edit-autor" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-genero" class="form-label">Género:</label>
+                            <input type="text" class="form-control" id="edit-genero" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="edit-sinopsis" class="form-label">Sinopsis:</label>
+                            <textarea class="form-control" id="edit-sinopsis"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Actualizar</button>
+                        <button type="button" id="cancel-edit" class="btn btn-secondary">Cancelar</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+
     <script defer src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
